docs: update thesis

--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,206 @@
 
+@misc{landau_targets_2023,
+	title = {targets: {Dynamic} {Function}-{Oriented} '{Make}'-{Like} {Declarative} {Pipelines}},
+	copyright = {MIT + file LICENSE},
+	shorttitle = {targets},
+	url = {https://cran.r-project.org/web/packages/targets/index.html},
+	abstract = {Pipeline tools coordinate the pieces of computationally demanding analysis projects. The 'targets' package is a 'Make'-like pipeline tool for statistics and data science in R. The package skips costly runtime for tasks that are already up to date, orchestrates the necessary computation with implicit parallel computing, and abstracts files as R objects. If all the current output matches the current upstream code and data, then the whole pipeline is up to date, and the results are more trustworthy than otherwise. The methodology in this package borrows from GNU 'Make' (2015, ISBN:978-9881443519) and 'drake' (2018, {\textless}doi:10.21105/joss.00550{\textgreater}).},
+	urldate = {2023-07-18},
+	author = {Landau, William Michael and Warkentin, Matthew T. and Edmondson, Mark and Oliver, Samantha and Mahr, Tristan and Company, Eli Lilly and},
+	month = jun,
+	year = {2023},
+	keywords = {HighPerformanceComputing, ReproducibleResearch},
+}
+
+@book{neal_mcmc_2011,
+	title = {{MCMC} using {Hamiltonian} dynamics},
+	url = {http://arxiv.org/abs/1206.1901},
+	abstract = {Hamiltonian dynamics can be used to produce distant proposals for the Metropolis algorithm, thereby avoiding the slow exploration of the state space that results from the diffusive behaviour of simple random-walk proposals. Though originating in physics, Hamiltonian dynamics can be applied to most problems with continuous state spaces by simply introducing fictitious "momentum" variables. A key to its usefulness is that Hamiltonian dynamics preserves volume, and its trajectories can thus be used to define complex mappings without the need to account for a hard-to-compute Jacobian factor - a property that can be exactly maintained even when the dynamics is approximated by discretizing time. In this review, I discuss theoretical and practical aspects of Hamiltonian Monte Carlo, and present some of its variations, including using windows of states for deciding on acceptance or rejection, computing trajectories using fast approximations, tempering during the course of a trajectory to handle isolated modes, and short-cut methods that prevent useless trajectories from taking much computation time.},
+	urldate = {2023-07-13},
+	author = {Neal, Radford M.},
+	month = may,
+	year = {2011},
+	note = {arXiv:1206.1901 [physics, stat]},
+	keywords = {Physics - Computational Physics, Statistics - Computation},
+}
+
+@article{hastings_monte_1970,
+	title = {Monte {Carlo} {Sampling} {Methods} {Using} {Markov} {Chains} and {Their} {Applications}},
+	volume = {57},
+	issn = {0006-3444},
+	url = {https://www.jstor.org/stable/2334940},
+	doi = {10.2307/2334940},
+	abstract = {A generalization of the sampling method introduced by Metropolis et al. (1953) is presented along with an exposition of the relevant theory, techniques of application and methods and difficulties of assessing the error in Monte Carlo estimates. Examples of the methods, including the generation of random orthogonal matrices and potential applications of the methods to numerical problems arising in statistics, are discussed.},
+	number = {1},
+	urldate = {2023-07-13},
+	journal = {Biometrika},
+	author = {Hastings, W. K.},
+	year = {1970},
+	pages = {97--109},
+}
+
+@article{gelfand_sampling-based_1990,
+	title = {Sampling-{Based} {Approaches} to {Calculating} {Marginal} {Densities}},
+	volume = {85},
+	issn = {0162-1459},
+	url = {https://www.jstor.org/stable/2289776},
+	doi = {10.2307/2289776},
+	abstract = {Stochastic substitution, the Gibbs sampler, and the sampling-importance-resampling algorithm can be viewed as three alternative sampling- (or Monte Carlo-) based approaches to the calculation of numerical estimates of marginal probability distributions. The three approaches will be reviewed, compared, and contrasted in relation to various joint probability structures frequently encountered in applications. In particular, the relevance of the approaches to calculating Bayesian posterior densities for a variety of structured models will be discussed and illustrated.},
+	number = {410},
+	urldate = {2023-07-13},
+	journal = {Journal of the American Statistical Association},
+	author = {Gelfand, Alan E. and Smith, Adrian F. M.},
+	year = {1990},
+	pages = {398--409},
+}
+
+@book{kolmogoroff_grundbegriffe_1933,
+	address = {Berlin, Heidelberg},
+	title = {Grundbegriffe der {Wahrscheinlichkeitsrechnung}},
+	isbn = {9783642495960 9783642498886},
+	url = {http://link.springer.com/10.1007/978-3-642-49888-6},
+	language = {de},
+	urldate = {2023-07-12},
+	publisher = {Springer},
+	author = {Kolmogoroff, A.},
+	year = {1933},
+	doi = {10.1007/978-3-642-49888-6},
+	keywords = {Gesetz der großen Zahlen, Wahrscheinlichkeit, Wahrscheinlichkeitsrechnung},
+}
+
+@misc{bon_being_2023,
+	title = {Being {Bayesian} in the 2020s: opportunities and challenges in the practice of modern applied {Bayesian} statistics},
+	shorttitle = {Being {Bayesian} in the 2020s},
+	url = {http://arxiv.org/abs/2211.10029},
+	doi = {10.48550/arXiv.2211.10029},
+	abstract = {Building on a strong foundation of philosophy, theory, methods and computation over the past three decades, Bayesian approaches are now an integral part of the toolkit for most statisticians and data scientists. Whether they are dedicated Bayesians or opportunistic users, applied professionals can now reap many of the benefits afforded by the Bayesian paradigm. In this paper, we touch on six modern opportunities and challenges in applied Bayesian statistics: intelligent data collection, new data sources, federated analysis, inference for implicit models, model transfer and purposeful software products.},
+	urldate = {2023-07-12},
+	publisher = {arXiv},
+	author = {Bon, Joshua J. and Bretherton, Adam and Buchhorn, Katie and Cramb, Susanna and Drovandi, Christopher and Hassan, Conor and Jenner, Adrianne L. and Mayfield, Helen J. and McGree, James M. and Mengersen, Kerrie and Price, Aiden and Salomone, Robert and Santos-Fernandez, Edgar and Vercelloni, Julie and Wang, Xiaoyu},
+	month = jan,
+	year = {2023},
+	note = {arXiv:2211.10029 [stat]},
+	keywords = {Statistics - Applications},
+}
+
+@article{gelman_holes_2021,
+	title = {Holes in {Bayesian} {Statistics}},
+	volume = {48},
+	issn = {0954-3899, 1361-6471},
+	url = {http://arxiv.org/abs/2002.06467},
+	doi = {10.1088/1361-6471/abc3a5},
+	abstract = {Every philosophy has holes, and it is the responsibility of proponents of a philosophy to point out these problems. Here are a few holes in Bayesian data analysis: (1) the usual rules of conditional probability fail in the quantum realm, (2) flat or weak priors lead to terrible inferences about things we care about, (3) subjective priors are incoherent, (4) Bayesian decision picks the wrong model, (5) Bayes factors fail in the presence of flat or weak priors, (6) for Cantorian reasons we need to check our models, but this destroys the coherence of Bayesian inference. Some of the problems of Bayesian statistics arise from people trying to do things they shouldn't be trying to do, but other holes are not so easily patched. In particular, it may be a good idea to avoid flat, weak, or conventional priors, but such advice, if followed, would go against the vast majority of Bayesian practice and requires us to confront the fundamental incoherence of Bayesian inference. This does not mean that we think Bayesian inference is a bad idea, but it does mean that there is a tension between Bayesian logic and Bayesian workflow which we believe can only be resolved by considering Bayesian logic as a tool, a way of revealing inevitable misfits and incoherences in our model assumptions, rather than as an end in itself.},
+	number = {1},
+	urldate = {2023-07-12},
+	journal = {Journal of Physics G: Nuclear and Particle Physics},
+	author = {Gelman, Andrew and Yao, Yuling},
+	month = jan,
+	year = {2021},
+	note = {arXiv:2002.06467 [math, stat]},
+	keywords = {Mathematics - Statistics Theory, Statistics - Methodology},
+	pages = {014002},
+}
+
+@incollection{coles_bayesians_2006,
+	title = {Bayesians versus {Frequentists}},
+	isbn = {9780198567622},
+	url = {https://doi.org/10.1093/acprof:oso/9780198567622.003.0004},
+	abstract = {There are two competing interpretations of probability. One is the view that probabilities should be interpreted as frequencies in some large ensemble of repeated experiments under identical conditions. The general term given to this interpretation of probability is frequentist, which is favoured by experimental scientists and observational astronomers. The principal alternative to frequentism is the Bayesian interpretation, represented by Bayes' theorem. Probability theory becomes not a branch of experimental science but a branch of logic. There is no other way to reason consistently in the face of uncertainty than probability theory. The maximum entropy principle involves the assignment of measure of the lack of information contained in a probability distribution.},
+	urldate = {2023-07-12},
+	booktitle = {From {Cosmos} to {Chaos}: {The} {Science} of {Unpredictability}},
+	publisher = {Oxford University Press},
+	author = {Coles, Peter},
+	editor = {Coles, Peter},
+	month = jun,
+	year = {2006},
+	doi = {10.1093/acprof:oso/9780198567622.003.0004},
+	pages = {0},
+}
+
+@book{vallverdu_bayesians_2016,
+	address = {Berlin, Heidelberg},
+	series = {{SpringerBriefs} in {Statistics}},
+	title = {Bayesians {Versus} {Frequentists}},
+	isbn = {9783662486368 9783662486382},
+	url = {http://link.springer.com/10.1007/978-3-662-48638-2},
+	urldate = {2023-07-12},
+	publisher = {Springer},
+	author = {Vallverdú, Jordi},
+	year = {2016},
+	doi = {10.1007/978-3-662-48638-2},
+	keywords = {00A30, 01Axx, 62-03, Bayesian, causality, determinism, history of mathematics, philosophy of mathematics, statistical thinking},
+}
+
+@article{bayarri_interplay_2004,
+	title = {The {Interplay} of {Bayesian} and {Frequentist} {Analysis}},
+	volume = {19},
+	issn = {0883-4237},
+	url = {https://www.jstor.org/stable/4144373},
+	abstract = {Statistics has struggled for nearly a century over the issue of whether the Bayesian or frequentist paradigm is superior. This debate is far from over and, indeed, should continue, since there are fundamental philosophical and pedagogical issues at stake. At the methodological level, however, the debate has become considerably muted, with the recognition that each approach has a great deal to contribute to statistical practice and each is actually essential for full development of the other approach. In this article, we embark upon a rather idiosyncratic walk through some of these issues.},
+	number = {1},
+	urldate = {2023-07-12},
+	journal = {Statistical Science},
+	author = {Bayarri, M. J. and Berger, J. O.},
+	year = {2004},
+	pages = {58--80},
+}
+
+@article{adragni_sufficient_2009,
+	title = {Sufficient dimension reduction and prediction in regression},
+	volume = {367},
+	url = {https://royalsocietypublishing.org/doi/abs/10.1098/rsta.2009.0110},
+	doi = {10.1098/rsta.2009.0110},
+	abstract = {Dimension reduction for regression is a prominent issue today because technological advances now allow scientists to routinely formulate regressions in which the number of predictors is considerably larger than in the past. While several methods have been proposed to deal with such regressions, principal components (PCs) still seem to be the most widely used across the applied sciences. We give a broad overview of ideas underlying a particular class of methods for dimension reduction that includes PCs, along with an introduction to the corresponding methodology. New methods are proposed for prediction in regressions with many predictors.},
+	number = {1906},
+	urldate = {2023-07-12},
+	journal = {Philosophical Transactions of the Royal Society A: Mathematical, Physical and Engineering Sciences},
+	author = {Adragni, Kofi P. and Cook, R. Dennis},
+	month = nov,
+	year = {2009},
+	keywords = {lasso, partial least squares, principal component regression, principal components, principal fitted components},
+	pages = {4385--4405},
+}
+
+@article{rubin_estimating_1974,
+	title = {Estimating causal effects of treatments in randomized and nonrandomized studies},
+	volume = {66},
+	issn = {1939-2176},
+	doi = {10.1037/h0037350},
+	abstract = {Presents a discussion of matching, randomization, random sampling, and other methods of controlling extraneous variation. The objective was to specify the benefits of randomization in estimating causal effects of treatments. It is concluded that randomization should be employed whenever possible but that the use of carefully controlled nonrandomized data to estimate causal effects is a reasonable and necessary procedure in many cases. (15 ref) (PsycINFO Database Record (c) 2016 APA, all rights reserved)},
+	number = {5},
+	journal = {Journal of Educational Psychology},
+	author = {Rubin, Donald B.},
+	year = {1974},
+	keywords = {Experimental Design, Random Sampling},
+	pages = {688--701},
+}
+
+@article{rubin_causal_2005,
+	title = {Causal {Inference} {Using} {Potential} {Outcomes}},
+	volume = {100},
+	issn = {0162-1459},
+	url = {https://doi.org/10.1198/016214504000001880},
+	doi = {10.1198/016214504000001880},
+	abstract = {Causal effects are defined as comparisons of potential outcomes under different treatments on a common set of units. Observed values of the potential outcomes are revealed by the assignment mechanism—a probabilistic model for the treatment each unit receives as a function of covariates and potential outcomes. Fisher made tremendous contributions to causal inference through his work on the design of randomized experiments, but the potential outcomes perspective applies to other complex experiments and nonrandomized studies as well. As noted by Kempthorne in his 1976 discussion of Savage's Fisher lecture, Fisher never bridged his work on experimental design and his work on parametric modeling, a bridge that appears nearly automatic with an appropriate view of the potential outcomes framework, where the potential outcomes and covariates are given a Bayesian distribution to complete the model specification. Also, this framework crisply separates scientific inference for causal effects and decisions based on such inference, a distinction evident in Fisher's discussion of tests of significance versus tests in an accept/reject framework. But Fisher never used the potential outcomes framework, originally proposed by Neyman in the context of randomized experiments, and as a result he provided generally flawed advice concerning the use of the analysis of covariance to adjust for posttreatment concomitants in randomized trials.},
+	number = {469},
+	urldate = {2023-07-12},
+	journal = {Journal of the American Statistical Association},
+	author = {Rubin, Donald B},
+	month = mar,
+	year = {2005},
+	keywords = {Analysis of covariance, Assignment mechanism, Assignment-based causal inference, Bayesian inference, Direct causal effects, Fieller–Creasy, Fisher, Neyman, Observational studies, Principal stratification, Randomized experiments, Rubin causal model},
+	pages = {322--331},
+}
+
+@book{lecun_phd_1987,
+	title = {{PhD} thesis: {Modeles} connexionnistes de l'apprentissage (connectionist learning models)},
+	shorttitle = {{PhD} thesis},
+	publisher = {Universite P. et M. Curie (Paris 6)},
+	author = {Lecun, Yann},
+	month = jun,
+	year = {1987},
+}
+
 @book{van_der_laan_unified_2003,
 	address = {New York, NY},
 	series = {Springer {Series} in {Statistics}},
@@ -759,25 +961,6 @@ Media framing of sepsis and AMR has been identified as influencing public expect
 	pmcid = {PMC6907751},
 	keywords = {Databases, Genetic, Drug Approval, Genetic Predisposition to Disease, Genome-Wide Association Study, Genomics, Humans, Models, Statistical, Pharmacogenomic Variants, Phenotype, Precision Medicine, Quantitative Trait Loci},
 	pages = {e1008489},
-}
-
-@article{nelson_support_2015,
-	title = {The support of human genetic evidence for approved drug indications},
-	volume = {47},
-	copyright = {2015 Nature Publishing Group, a division of Macmillan Publishers Limited. All Rights Reserved.},
-	issn = {1546-1718},
-	url = {https://www.nature.com/articles/ng.3314},
-	doi = {10.1038/ng.3314},
-	abstract = {Matthew Nelson and colleagues investigate how well genetic evidence for disease susceptibility predicts drug mechanisms. They find a correlation between gene products that are successful drug targets and genetic loci associated with the disease treated by the drug and predict that selecting genetically supported targets could increase the success rate of drugs in clinical development.},
-	language = {en},
-	number = {8},
-	urldate = {2023-05-19},
-	journal = {Nature Genetics},
-	author = {Nelson, Matthew R. and Tipney, Hannah and Painter, Jeffery L. and Shen, Judong and Nicoletti, Paola and Shen, Yufeng and Floratos, Aris and Sham, Pak Chung and Li, Mulin Jun and Wang, Junwen and Cardon, Lon R. and Whittaker, John C. and Sanseau, Philippe},
-	month = aug,
-	year = {2015},
-	keywords = {Drug screening, Genetic association study},
-	pages = {856--860},
 }
 
 @article{dowden_trends_2019,
@@ -1599,26 +1782,7 @@ Media framing of sepsis and AMR has been identified as influencing public expect
 	pages = {942--948},
 }
 
-@article{king_are_2019-1,
-	title = {Are drug targets with genetic support twice as likely to be approved? {Revised} estimates of the impact of genetic support for drug mechanisms on the probability of drug approval},
-	volume = {15},
-	issn = {1553-7404},
-	shorttitle = {Are drug targets with genetic support twice as likely to be approved?},
-	url = {https://journals.plos.org/plosgenetics/article?id=10.1371/journal.pgen.1008489},
-	doi = {10.1371/journal.pgen.1008489},
-	abstract = {Despite strong vetting for disease activity, only 10\% of candidate new molecular entities in early stage clinical trials are eventually approved. Analyzing historical pipeline data, Nelson et al. 2015 (Nat. Genet.) concluded pipeline drug targets with human genetic evidence of disease association are twice as likely to lead to approved drugs. Taking advantage of recent clinical development advances and rapid growth in GWAS datasets, we extend the original work using updated data, test whether genetic evidence predicts future successes and introduce statistical models adjusting for target and indication-level properties. Our work confirms drugs with genetically supported targets were more likely to be successful in Phases II and III. When causal genes are clear (Mendelian traits and GWAS associations linked to coding variants), we find the use of human genetic evidence increases approval by greater than two-fold, and, for Mendelian associations, the positive association holds prospectively. Our findings suggest investments into genomics and genetics are likely to be beneficial to companies deploying this strategy.},
-	language = {en},
-	number = {12},
-	urldate = {2023-03-27},
-	journal = {PLOS Genetics},
-	author = {King, Emily A. and Davis, J. Wade and Degner, Jacob F.},
-	month = dec,
-	year = {2019},
-	keywords = {Catalogs, Drug discovery, Drug research and development, Genetics, Genetics of disease, Genome-wide association studies, Human genetics, Medical risk factors},
-	pages = {e1008489},
-}
-
-@article{nelson_support_2015-1,
+@article{nelson_support_2015,
 	title = {The support of human genetic evidence for approved drug indications},
 	volume = {47},
 	copyright = {2015 Nature Publishing Group, a division of Macmillan Publishers Limited. All Rights Reserved.},
@@ -3075,7 +3239,7 @@ Using a two-stage approach, this study validates several actionable targets for 
 	urldate = {2022-03-17},
 }
 
-@misc{noauthor_diagnostic_nodate-1,
+@misc{noauthor_diagnostic_nodate,
 	title = {Diagnostic {Host} {Gene} {Expression} {Analysis} by {Quantitative} {Reverse} {Transcription} {Loop}-{Mediated} {Isothermal} {Amplification} to {Discriminate} between {Bacterial} and {Viral} {Infections} - {PubMed}},
 	url = {https://pubmed.ncbi.nlm.nih.gov/35134876/},
 	urldate = {2022-03-17},
